@@ -2652,23 +2652,26 @@ sub AI {
 				next;
 			}
 
-			if ($config{"attackComboSlot_${i}_afterSkill"} eq $lastSkill
-			 && ( !$config{"attackComboSlot_${i}_maxUses"} || $args->{attackComboSlot_uses}{$i} < $config{"attackComboSlot_${i}_maxUses"} )
-			 && ( !defined($args->{ID}) || $args->{ID} eq $char->{last_skill_target} )
-			 && checkSelfCondition("attackComboSlot_$i")
-			 && (!$config{"attackComboSlot_${i}_monsters"} || existsInList($config{"attackComboSlot_${i}_monsters"}, $target->{name}))
-			 && (!$config{"attackComboSlot_${i}_notMonsters"} || !existsInList($config{"attackComboSlot_${i}_notMonsters"}, $target->{name}))
-			 && checkMonsterCondition("attackComboSlot_${i}_target", $target)) {
-
-				$args->{attackComboSlot_uses}{$i}++;
-				delete $char->{last_skill_used};
-				$args->{attackMethod}{type} = "combo";
-				$args->{attackMethod}{comboSlot} = $i;
-				$args->{attackMethod}{distance} = $config{"attackComboSlot_${i}_dist"};
-				$args->{attackMethod}{maxDistance} = $config{"attackComboSlot_${i}_dist"};
-				$args->{attackMethod}{isSelfSkill} = $config{"attackComboSlot_${i}_isSelfSkill"};
-				last;
-			}
+                        if ($config{"attackComboSlot_${i}_afterSkill"} eq $lastSkill
+                         && ( !$config{"attackComboSlot_${i}_maxUses"} || $args->{attackComboSlot_uses}{$i} < $config{"attackComboSlot_${i}_maxUses"} )
+                         && ( !$config{"attackComboSlot_${i}_autoCombo"} || ($char->{combo_packet} && $config{"attackComboSlot_${i}_autoCombo"}) )
+                         && ( !defined($args->{ID}) || $args->{ID} eq $char->{last_skill_target} )
+                         && checkSelfCondition("attackComboSlot_$i")
+                         && (!$config{"attackComboSlot_${i}_monsters"} || existsInList($config{"attackComboSlot_${i}_monsters"}, $target->{name}))
+                         && (!$config{"attackComboSlot_${i}_notMonsters"} || !existsInList($config{"attackComboSlot_${i}_notMonsters"}, $target->{name}))
+                         && checkMonsterCondition("attackComboSlot_${i}_target", $target)) {
+ 
+                                $args->{attackComboSlot_uses}{$i}++;
+                                delete $char->{last_skill_used};
+                                $config{"attackComboSlot_${i}_waitBeforeUse"} = $char->{combo_packet} if $config{"attackComboSlot_${i}_autoCombo"};
+                                delete $char->{combo_packet};
+                                $args->{attackMethod}{type} = "combo";
+                                $args->{attackMethod}{comboSlot} = $i;
+                                $args->{attackMethod}{distance} = $config{"attackComboSlot_${i}_dist"};
+                                $args->{attackMethod}{maxDistance} = $config{"attackComboSlot_${i}_dist"};
+                                $args->{attackMethod}{isSelfSkill} = $config{"attackComboSlot_${i}_isSelfSkill"};
+                                last;
+                        }
 			$i++;
 		}
 
